--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,29 +18,32 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
-
     dataBinding {
         enabled = true
     }
+    buildToolsVersion '27.0.2'
 }
 
 dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-    implementation "org.projectlombok:lombok:1.16.14"
+    implementation 'org.projectlombok:lombok:1.16.14'
     annotationProcessor 'org.projectlombok:lombok:1.16.14'
+
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
-    implementation "com.google.code.gson:gson:2.3"
+
+    implementation 'com.google.code.gson:gson:2.3'
 }
