--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
-/.idea/libraries
+/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+/.svn
